# aurora

./: .gitignore  Cargo.toml  LICENSE.md  README.md  index.html
.cargo/: config.toml
.github/workflows/: pages.yml
crates/wgsl_preprocessor/: Cargo.toml  README.md
crates/wgsl_preprocessor/examples/: basic_usage.rs
crates/wgsl_preprocessor/src/: lib.rs
crates/wgsl_preprocessor/test_shaders/: common.wgsl  conditional.wgsl  fragment.wgsl  vertex.wgsl
crates/wgsl_preprocessor_macro/: Cargo.toml  README.md
crates/wgsl_preprocessor_macro/src/: lib.rs
data/colormaps/: plasma  viridis
examples/: multi_scene.rs  nbodysim.rs  pathtracer.rs  scalar_field.rs  window.rs
examples/nbodysim/: main.rs
examples/nbodysim/shader/: forces.wgsl  render.wgsl  update.wgsl
examples/nbodysim_impl/: mod.rs
examples/nbodysim_impl/shader/: common.wgsl  forces.wgsl  initialize.wgsl  render.wgsl  update.wgsl
examples/pathtracer/: main.rs
examples/pathtracer/shader/: copy.wgsl  handle_primary.wgsl  intersect.wgsl  nee_miss.wgsl  nee_sample.wgsl  pathtracer.wgsl  primary.wgsl  random.wgsl  reorder_intersections.wgsl  schedule.wgsl  structs.wgsl
examples/pathtracer_impl/: mod.rs
examples/pathtracer_impl/shader/: copy.wgsl  intersect.wgsl  nee_miss.wgsl  nee_sample.wgsl  pathtracer.wgsl  primary.wgsl  random.wgsl  reorder_intersections.wgsl  schedule_intersect.wgsl
models/: cornell_box.mtl  cornell_box.toml  tooth.nhdr
shader/: basic3d.wgsl  buffer_convert_f32_f16.wgsl  intersect.wgsl  pathtracer.wgsl  random.wgsl  scalar_field.wgsl  scalar_field_utils.wgsl  target_view.wgsl  wireframe.wgsl
src/: buffers.rs  files.rs  internal.rs  lib.rs  scenes.rs  shader.rs  testing.rs  web_bindings.rs
src/vis/: mod.rs  nrrd.rs  tf.rs
