[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dynamic_shaders= []

#[[example]]
#name = "window"
#required-features = ["dynamic_shaders"]

[dependencies]
cfg-if = "1"
winit = "0.30.9"
log  = "0.4.27"
wgpu = "24.0.3"
glam = { version = "0.30.2", features = ["glam-assert"] }
eframe = "0.31.1"
egui = "0.31.1"
egui-wgpu = "0.31.1"
pollster = "0.4.0"
egui-winit = "0.31.1"
env_logger = "0.11.8"
tobj = "4.0.3"
bytemuck = "1.22.0"
clap = { version = "4.5.37", features = ["derive"] }
