[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dynamic_shaders= []

#[[example]]
#name = "window"
#required-features = ["dynamic_shaders"]

[dependencies]
cfg-if = "1"
winit = "0.30.9"
log  = "0.4.27"
wgpu = "24.0.3"
glam = { version = "0.30.2", features = ["glam-assert"] }
egui = "0.31.1"
egui-wgpu = "0.31.1"
pollster = "0.4.0"
egui-winit = { version = "0.31.1", default-features = false, features = ["links", "wayland", "x11"] }
env_logger = "0.11.8"
tobj = { version = "4.0.3", features = ["futures"] }
bytemuck = "1.22.0"
clap = { version = "4.5.37", features = ["derive"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand = "0.9.2"
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4.50"
console_log = "1.0.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
reqwest = "0.12.22"
bytes = "1.10.1"
exr = "1.73.0"
wgsl_preprocessor = { path = "crates/wgsl_preprocessor" }
wgsl_preprocessor_macro = { path = "crates/wgsl_preprocessor_macro" }

[dependencies.web-sys]
version = "0.3.77"
features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "ReadableStream", "Location", "Blob", "Url", "HtmlAnchorElement", "Document", "Element", "Node", "console"]
