[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Benedikt Krimmel"]
homepage = "https://paxplay.github.io/aurora"

[features]
dynamic_shaders = []
test-utils = []

[dependencies]
cfg-if = "1"
winit = "^0.30.12"
log = "^0.4.27"
wgpu = "29.0.1"
glam = { version = "0.32.1", features = ["glam-assert", "serde", "bytemuck"] }
egui = "0.34.1"
egui-wgpu = "0.34.1"
pollster = "0.4.0"
egui-winit = { version = "0.34.1", default-features = false, features = [
    "links",
    "wayland",
    "x11",
] }
env_logger = "0.11.8"
tobj = { version = "4.0.3", features = ["futures"] }
bytemuck = "1.25.0"
clap = { version = "4.5.37", features = ["derive"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rand = { version = "0.10.1", default-features = false }
rand_pcg = "0.10.2"
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4.50"
console_log = "1.0.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
reqwest = "0.13.2"
bytes = "1.10.1"
exr = "1.73.0"
wgsl_preprocessor = { path = "crates/wgsl_preprocessor" }
wgsl_preprocessor_macro = { path = "crates/wgsl_preprocessor_macro" }
chrono = "0.4.41"
egui_plot = "0.35.0"
egui_extras = "0.34.1"
toml = "1.1.2+spec-1.1.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_arrays = "0.2.0"
web-time = "1.1.0"
futures-lite = "2.6.1"
emath = "0.34.1"

# egui mouse pointer capture behavior is broken, fixed by https://github.com/emilk/egui/commit/b117a1ac19954199bb60230ee758b89bd91ab1d8
[patch.crates-io]
egui = { git = "https://github.com/emilk/egui.git", rev = "b117a1ac19954199bb60230ee758b89bd91ab1d8" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "b117a1ac19954199bb60230ee758b89bd91ab1d8" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "b117a1ac19954199bb60230ee758b89bd91ab1d8" }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "b117a1ac19954199bb60230ee758b89bd91ab1d8" }
emath = { git = "https://github.com/emilk/egui.git", rev = "b117a1ac19954199bb60230ee758b89bd91ab1d8" }
epaint = { git = "https://github.com/emilk/egui.git", rev = "b117a1ac19954199bb60230ee758b89bd91ab1d8" }
ecolor = { git = "https://github.com/emilk/egui.git", rev = "b117a1ac19954199bb60230ee758b89bd91ab1d8" }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ReadableStream",
    "Location",
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Document",
    "Element",
    "Node",
    "console",
    "CustomEvent"
]
